--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,12 @@ version: '2'
 services:
   registry:
     build: .
-    #image: nanopub/registry
+    image: nanopub/registry
     restart: unless-stopped
     ports:
       - 9292:8080
   db:
-    image: nanopub/mongo
-    #image: mongo
+    image: mongo:7
     restart: unless-stopped
     volumes:
       - ./data/mongodb:/data/db
