--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
-      <version>2.0.6</version>
+      <version>2.0.9</version>
     </dependency>
     <dependency>
       <groupId>jakarta.servlet</groupId>
@@ -49,12 +49,12 @@
     <dependency>
       <groupId>org.nanopub</groupId>
       <artifactId>nanopub</artifactId>
-      <version>1.45</version>
+      <version>1.52</version>
     </dependency>
     <dependency>
       <groupId>org.mongodb</groupId>
       <artifactId>mongo-java-driver</artifactId>
-      <version>3.12.12</version>
+      <version>3.12.14</version>
     </dependency>
     <dependency>
       <groupId>org.commonjava.mimeparse</groupId>
@@ -106,7 +106,7 @@
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <rdf4j.version>2.4.4</rdf4j.version>
+    <rdf4j.version>5.0.0-M2</rdf4j.version>
     <timestamp>${maven.build.timestamp}</timestamp>
     <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
   </properties>
