--- a/docker-compose.override.yml.template
+++ b/docker-compose.override.yml.template
@@ -12,6 +12,6 @@ services:
   mongo-express:
     image: mongo-express
     environment:
-      - ME_CONFIG_MONGODB_SERVER=mongodb
+      - ME_CONFIG_MONGODB_URL=mongodb://mongodb:27017
     ports:
       - 8081:8081
