--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
       <artifactId>jcommander</artifactId>
       <version>1.82</version>
     </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20240303</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>nanopub-registry</finalName>
