--- a/docker-compose.override.yml.template
+++ b/docker-compose.override.yml.template
@@ -6,12 +6,6 @@ services:
       - REGISTRY_COVERAGE_TYPES=*
       - REGISTRY_COVERAGE_AGENTS=via-setting
       - NANOPUB_REGISTRY_DB_HOST=172.17.0.1  # use shared MongoDB
-  mongodb:
-    ports:
-      - 27017:27017
-  mongo-express:
-    image: mongo-express
-    environment:
-      - ME_CONFIG_MONGODB_URL=mongodb://mongodb:27017
-    ports:
-      - 8081:8081
+  mongodb:  # disable when shared MongoDB is used
+    deploy:
+      replicas: 0
