--- a/docker-compose.override.yml.template
+++ b/docker-compose.override.yml.template
@@ -9,3 +9,9 @@ services:
   mongodb:  # disable when shared MongoDB is used
     deploy:
       replicas: 0
+  mongo-express:
+    image: mongo-express
+    environment:
+      ME_CONFIG_MONGODB_URL: mongodb://mongodb:27017/?directConnection=true&tls=false
+    ports:
+      - 8081:8081
