--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
     <dependency>
       <groupId>org.nanopub</groupId>
       <artifactId>nanopub</artifactId>
-      <version>1.65</version>
+      <version>1.66</version>
     </dependency>
     <dependency>
       <groupId>org.mongodb</groupId>
@@ -75,6 +75,11 @@
       <groupId>com.beust</groupId>
       <artifactId>jcommander</artifactId>
       <version>1.82</version>
+    </dependency>
+    <dependency>
+      <groupId>eu.ostrzyciel.jelly</groupId>
+      <artifactId>jelly-rdf4j_3</artifactId>
+      <version>2.3.0</version>
     </dependency>
   </dependencies>
   <build>
