--- a/docker-compose.override.yml.template
+++ b/docker-compose.override.yml.template
@@ -3,8 +3,9 @@ services:
     volumes:
       - ./target/nanopub-registry/:/usr/local/tomcat/webapps/ROOT
     environment:
-      - REGISTRY_COVERAGE_TYPES=*
+      - REGISTRY_COVERAGE_TYPES=all
       - REGISTRY_COVERAGE_AGENTS=viaSetting
+      - REGISTRY_SERVICE_URL=https://your.public.registry.url.com/
       - NANOPUB_REGISTRY_DB_HOST=172.17.0.1  # use shared MongoDB
   mongodb:  # disable when shared MongoDB is used
     deploy:
