--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
     <launcher.class>io.vertx.core.Launcher</launcher.class>
   </properties>
 
+  <repositories>
+    <repository>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
+    </repository>
+  </repositories>
+
   <licenses>
     <license>
       <name>MIT license</name>
@@ -86,10 +93,16 @@
       <artifactId>rdf4j-rio-jsonld</artifactId>
       <version>${rdf4j.version}</version>
     </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.nanopub</groupId>-->
+<!--      <artifactId>nanopub</artifactId>-->
+<!--      <version>1.70-snapshot</version>-->
+<!--    </dependency>-->
+    <!-- Temporary: dependency on Jitpack for snapshot builds -->
     <dependency>
-      <groupId>org.nanopub</groupId>
-      <artifactId>nanopub</artifactId>
-      <version>1.69</version>
+      <groupId>com.github.Nanopublication</groupId>
+      <artifactId>nanopub-java</artifactId>
+      <version>1b55c03442929f4195ef19b66a847308386f7261</version>
     </dependency>
     <dependency>
       <groupId>org.mongodb</groupId>
@@ -119,7 +132,7 @@
     <dependency>
       <groupId>eu.ostrzyciel.jelly</groupId>
       <artifactId>jelly-rdf4j_3</artifactId>
-      <version>2.7.0</version>
+      <version>2.8.0</version>
     </dependency>
   </dependencies>
 
