--- a/docker-compose.override.yml.template
+++ b/docker-compose.override.yml.template
@@ -7,7 +7,7 @@ services:
       - REGISTRY_COVERAGE_AGENTS=viaSetting
 #     - REGISTRY_PERFORM_FULL_LOAD=false  # Set this to not perform a full load, e.g. for test instances
 #     - REGISTRY_SERVICE_URL=https://your.public.registry.url.com/
-#     - NANOPUB_REGISTRY_DB_HOST=172.17.0.1  # use shared MongoDB
+#     - REGISTRY_DB_HOST=172.17.0.1  # use shared MongoDB
     ports:
       - 5005:5005
     entrypoint: 'java -jar -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005 nanopub-registry.jar'
