--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
 
     <main.verticle>com.knowledgepixels.registry.MainVerticle</main.verticle>
-    <launcher.class>io.vertx.core.Launcher</launcher.class>
+    <launcher.class>com.knowledgepixels.registry.ApplicationLauncher</launcher.class>
   </properties>
 
   <repositories>
@@ -65,6 +65,10 @@
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-micrometer-metrics</artifactId>
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
@@ -133,6 +137,11 @@
       <groupId>eu.ostrzyciel.jelly</groupId>
       <artifactId>jelly-rdf4j_3</artifactId>
       <version>2.9.1</version>
+    </dependency>
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-registry-prometheus</artifactId>
+      <version>1.10.13</version>
     </dependency>
   </dependencies>
 
