--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     restart: unless-stopped
     ports:
       - 9292:9292
+      - "127.0.0.1:9293:9293" # this port should only be accessible from restricted environment as it is used for the metrics endpoint.
     volumes:
       - ./setting.trig:/data/setting.trig
     logging:
