--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,8 @@ services:
     restart: unless-stopped
     ports:
       - 9292:9292
-      - "127.0.0.1:9293:9293" # this port should only be accessible from restricted environment as it is used for the metrics endpoint.
+      # :9293 is only accessible from localhost as it is used for the /metrics endpoint
+      - "127.0.0.1:9293:9293" 
     volumes:
       - ./setting.trig:/data/setting.trig
     logging:
