--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,17 @@
       <artifactId>micrometer-registry-prometheus</artifactId>
       <version>1.10.13</version>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>2.0.17</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>2.0.17</version>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
 
   <build>
