--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,12 @@
       <version>2.0.17</version>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>testcontainers-mongodb</artifactId>
+      <version>2.0.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -256,6 +262,14 @@
               <port>9292</port>
             </ports>
           </container>
+          <extraDirectories>
+            <paths>
+              <path>
+                <from>${project.basedir}/setting.trig</from>
+                <to>/data</to>
+              </path>
+            </paths>
+          </extraDirectories>
         </configuration>
       </plugin>
     </plugins>
