--- a/pom.xml
+++ b/pom.xml
@@ -113,8 +113,9 @@
     </dependency>
     <dependency>
       <groupId>org.mongodb</groupId>
-      <artifactId>mongo-java-driver</artifactId>
-      <version>3.12.14</version>
+      <artifactId>mongodb-driver-sync</artifactId>
+      <version>4.10.0</version>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.commonjava.mimeparse</groupId>
